version 2.0.0.1 +fix some bugs